_helm_charts/xebia/helm-xebia-opa-gatekeeper@v0.2.0/samples/K8sBlockNpLb.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockNpLb
metadata:
  name: block-node-port
  labels:
    severity: high
    projectId: xlr8s-demo
    envId: dev
spec:
  enforcementAction: dryrun

  match:
    namespaces:
      - default

    excludedNamespaces:
      - kube-system
      - kube-public
      - kube-node-lease
      - gatekeeper-system

    kinds:
      - apiGroups: [""]
        kinds: ["Service"]

    labelSelector:
      matchLabels:
        app: nginx
