_helm_charts/xebia/helm-xebia-opa-gatekeeper@v0.2.0/samples/K8sCapsOnDeployment.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sCapsOnDeployment
metadata:
  name: deployment-must-have-caps
  labels:
    severity: high
    projectId: xlr8s-demo
    envId: dev
spec:
  enforcementAction: dryrun

  match:
    namespaces:
      - default

    excludedNamespaces:
      - kube-system
      - kube-public
      - kube-node-lease
      - gatekeeper-system

    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]

    labelSelector:
      matchLabels:
        app: nginx

  parameters:
    minReplicas: 3
